--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <base href="/">
   <title>TMNT 2.0</title>
 </head>
 <body>
   <div id="app"></div>
-  <script src='./build/bundle.js'></script>
+  <script type="application/javascript" src='../build/bundle.js'></script>
 </body>
 </html>
